# AsRigidAsPossibleDeformer

./: README.md
src/: ArapDeformer.cpp  ArapDeformer.h  CMakeLists.txt  GUI.h  SimpleMesh.h  glad.c  main.cpp
